# resilient_kokkos_collaboration

./: CMakeLists.txt  README.md  build.sh
cmake/Modules/: FindDataspaces.cmake
examples/: SimpleCheckpoint.cpp
src/resilience/: CMakeLists.txt  ManualCheckpoint.hpp
src/resilience/dataspaces/: CMakeLists.txt  DataspacesSpace.cpp  DataspacesSpace.hpp
src/resilience/filesystem/: ExternalIOInterface.cpp  ExternalIOInterface.hpp
src/resilience/hdf5/: HDF5Space.cpp
src/resilience/stdio/: StdFileSpace.cpp
tests/: CMakeLists.txt  TestMain.cpp  TestViewCheckpoint.cpp
tests/data/: dataspaces_test_config.json
tests/evaluation/: CMakeLists.txt  test_reader.cpp  test_reader.hpp  test_writer.cpp  test_writer.hpp
tests/grayscott/: CMakeLists.txt
tests/grayscott/analysis/: analysis.cpp  analysis.h  pdf_calc.cpp  pdf_calc_ds.cpp  pdf_calc_h5.cpp  pdf_calc_stdio.cpp  reader.cpp  reader.h  reader.hpp
tests/grayscott/simulation/: gray-scott.cpp  gray-scott.h  main.cpp  main_ds.cpp  main_h5.cpp  main_stdio.cpp  settings-ds.json  settings.cpp  settings.h  writer.cpp  writer.h  writer.hpp
